<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">UM Malibu</string>
    <string name="title_string">Title</string>
    <string name="date_string">Date</string>
    <string name="graphic_image_description">Series Graphic</string>
    <string name="activity_details">Sermon</string>
    <string name="title_activity_main">UM Malibu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_worship">Worship</string>
    <string name="songs_title_text">Songs recently played at UM</string>
    <string name="request_text">Type song Requests here... </string>
    <string name="submit">Submit</string>
    <string name="title_activity_prayer">Prayer</string>
    <string name="action_new">New Action</string>
    <string name="action_alerts">Notifications</string>
    <string name="title_activity_new_prayer">Prayer Request</string>
    <string name="anonymous">Anonymous</string>
    <string name="name">Name:</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_events_detail">Event</string>
    <string name="title_activity_activity_with_fragment">Activity_with_fragment</string>
    <string name="title_activity_about_um">About UM</string>
    <string name="title_activity_coffee">Connecting With UM</string>
    <string name="um_goal">At UM our job is to minister to students in any way we can. That means getting to know students on a more personal level than we can in the short time that everyone is together on Tuesday nights. We would love to talk about life, God, and answer any questions you may have about our ministry. Plus if you take the time to meet with us we will byy you a coffee, so you have nothing to lose. Use the link below to send us an email of talk to Steve at UM if you are interested.</string>
    <string name="meet_steve_title">Meet Our Director - Steve Smith</string>
    <string name="steve_bio_text">As a native of Northern California, Steve came to Malibu over a decade ago to attend Pepperdine. While there, Steve found and fell in love with UM.\n\nFrom finding a community of lifelong friends his freshman year, to finding his wife junior year, to serving as the UM his senior year, UM has played an absolutely pivotal role in Steve\'s life.\n\nSteve is elated to be the new Director of University Ministries after a few years away from Malibu. During that time, Steve worked in the advertising industry, completed his Masters of Divinity, worked as a chaplain in an ICU, co-pastored a church in Topanga Canyon, captained a crab fishing vessel on the Bering Sea, and married th woman of his dreams. (OK, one of those might not be true)\n\nNow at the helm of UM, Steve is excited to see what the Lord has in store for him and for the wonderful students of Pepperdine University. </string>
    <string name="about_link">Check us out at http://www.ummalibu.com or https://www.facebook.com/universityministries</string>
    <string name="about_um_text">UM is University Ministries, a college ministry hosted by Malibu Presbyterian Church that meets every Tuesday night at 8pm. We are focused on creating a community of people who can be real and love God together. This ministry is open to any college aged student. UM is lead by Steve Smith along with yearly interns. Check out our website or our facebook page below for more information, and we hope to see you on Tuesday nights!</string>
    <string name="about_ride_text">Shuttles to UM pick up students every week in Smothers Parking Lot on Pepperdine\'s main campus at 7:50 every Tuesday night.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notifications_list">Notifications</string>
    <string name="title_activity_umsl_menu">Send Push Notifications</string>
    <string name="pickup_location">Pickup Location</string>

    <string name="artist_text">Artists</string>
    <string name="next_text">Next</string>
    <string name="title_activity_artist_list">Artist List</string>
    <string name="title_activity_artists_frag">ArtistsFragActivity</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="title_activity_talk_detail">TalkDetailActivity</string>
    <string name="title_activity_umber">Map</string>
    <string name="events">Events</string>
    <string name="sermons">Sermons</string>
    <string name="umber">UMber</string>
    <string name="request_cant_be_claimed">Request can not be claimed at this time. Please try again later.</string>
    <string name="want_to_give_person_ride_to_address">Would you like to give %1$s a ride to %2$s?\n\nYou will be prompted to adjust the pickup time if necessary.</string>
    <string name="claim_request">Claim Request</string>
    <string name="ride_share">Ride Share</string>
    <string name="um">UM</string>
    <string name="split_gas_number_ways">Split Gas %s Ways</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="streaming_warning">Warning: streaming sermons uses almost 35mb of data per session. Wifi is recommended.\n\n(Take notes here)</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="finish">Finish</string>
    <string name="pick_up">Pick Up</string>
    <string name="start">Start</string>
    <string name="if_you_have_a_car">If you have a car enter the info below</string>
    <string name="request_a_ride">Request A Ride</string>
    <string name="image_url_optional">Image url (optional)</string>
    <string name="car_desc">Car Description</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="miles_per_gallon">Miles per Gallon (MPG)</string>
    <string name="unclaimed">Unclaimed</string>
    <string name="no_driver_yet">No Driver Yet</string>
    <string name="claimed">Claimed</string>
    <string name="unclaim">Unclaim</string>
    <string name="in_progress">In-Progress</string>
    <string name="on_the_way">On the way</string>
    <string name="picked_up">Picked Up</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="canceled">Canceled</string>
    <string name="feedback">Feedback</string>
    <string name="ride_started_cant_cancel_use_contact_button">Your driver has already started this ride and so it cannot be canceled. Use the contact button if you need to talk to your driver.</string>
    <string name="unable_to_cancel_request_att_ptg">Error, unable to cancel your request at this time. Please try again later</string>
    <string name="are_you_sure_u_want_to_cancel">Are you sure you want to cancel this request?</string>
    <string name="error_unable_to_find_driver">Error, unable to find your driver. Please try again later</string>
    <string name="um_talks">UM Talks</string>
    <string name="play_icon">▶</string>
    <string name="login">Login</string>

</resources>