<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/um_grey_blue"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_basic"/>

    <ScrollView
        android:id="@+id/scrollView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_want_to_meet_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/title_activity_coffee"
                android:textColor="#ff51fdff"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/um_mission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/um_goal"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="Send Email"
                android:textColor="#ff73ff00"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/meet_steve_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/meet_steve_title"
                android:textColor="#ff51fdff"
                android:textSize="24sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/steve_bio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/steve_bio_text"
                    android:textSize="16sp"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>